--- a/index.html
+++ b/index.html
@@ -3,15 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Inter:wght@200..700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
     <title>Home: Miniature Painting</title>
   </head>
+
   <body>
     <header>
       <div class="burger">
         <input type="checkbox" id="burger-toggle" />
-        <label for="burger-toggle" class="burger">
-          <img src="images/burger.png" alt="dropdown menu" />
+        <label for="burger-toggle" class="burger-label">
+          <img class="open" src="images/burger.png" alt="dropdown menu" />
+          <img
+            class="close"
+            src="images/close.png"
+            alt="dropdown menu - close"
+          />
         </label>
         <div class="burger-content">
           <nav>
@@ -25,7 +37,7 @@
           </nav>
         </div>
       </div>
-      </div>
+
       <section class="hero">
         <div class="hero-inner">
           <h1>Miniature Painting</h1>
@@ -33,7 +45,12 @@
       </section>
     </header>
     <main>
-      <img src="images/leviathan.png" alt="">
+      <img src="images/bt.png" alt="" />
+      <img src="images/bt.png" alt="" />
+      <img src="images/bt.png" alt="" />
+      <img src="images/bt.png" alt="" />
+      <img src="images/bt.png" alt="" />
+      <img src="images/bt.png" alt="" />
     </main>
     <footer>
       This website and all of its contents are ©
