--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <main>
       <div class="articles">
-        <section class="top">
+        <section class="top item-1">
           <a href="#">
             <img src="images/skaventide.png" alt="Skaventide boxset review" />
             <p class="article-title">Skaventide Unleashed</p>
@@ -55,14 +55,14 @@
           </a>
         </section>
         <div class="bottom-container">
-          <section class="bottom">
+          <section class="bottom item-2">
             <a href="#">
               <img src="images/tyranids.png" alt="Tyranids painting guide" />
               <p class="article-title">Guide: Painting Tyranids</p>
               <p class="article-desc">Colorful Horror From The Depths of Space</p>
             </a>
           </section>
-          <section class="bottom">
+          <section class="bottom item-3">
             <a href="#">
               <img src="images/bt.png" alt="Black Templars painting guide" />
               <p class="article-title">Guide: Painting Black Templars</p>
