navbar fixed, desktop and mobile latest painted models/contact window WIP

--- a/skaventide.html
+++ b/skaventide.html
@@ -38,7 +38,7 @@
       </div>
     </header>
     <main>
-      <div class="image-heading-skaventide">
+      <div class="image-heading skaventide">
         <p>Skaventide: Contents and Impressions</p>
       </div>
       <p class="test">
