--- a/tyranids-painting-guide.html
+++ b/tyranids-painting-guide.html
@@ -38,7 +38,7 @@
       </div>
     </header>
     <main>
-      <div class="image-heading-tyr">
+      <div class="image-heading tyr">
         <p>Tyranids: Painting Guide</p>
       </div>
       <p class="test">
