--- a/black-templars-painting-guide.html
+++ b/black-templars-painting-guide.html
@@ -38,7 +38,7 @@
       </div>
     </header>
     <main>
-      <div class="image-heading-bt">
+      <div class="image-heading bt">
         <p>Black Templars: Painting Guide</p>
       </div>
       <p class="test">
