--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <li><a class="underline" href="index.html">Home</a></li>
               <li><a class="underline" href="guides.html">Guides</a></li>
               <li><a class="underline" href="#">Reviews</a></li>
-              <li><a class="underline" href="#">Contacts</a></li>
+              <li><a class="underline" href="contacts.html">Contacts</a></li>
               <li><a class="underline" href="#">Specifications</a></li>
             </ul>
           </nav>
@@ -109,16 +109,33 @@
             </p>
           </article>
         </section>
-        <section class="contact">
+        <section class="contact home">
           <h3>Contact us</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus
-            consequatur voluptates itaque quod! Accusantium, sapiente id qui
-            nemo officiis asperiores ipsum ad doloribus? Magnam sit eos quisquam
-            porro rerum sequi rem, molestiae, totam reiciendis ratione
-            repellendus esse odit modi omnis velit pariatur enim? Ipsum
-            laboriosam quo nihil, non minus error.
-          </p>
+            If you wish to get in touch with our team, leave your message below
+            and our kind cave trolls will be let out of their cages to carefully
+            rewrite your message on the parchment paper, and deliver your message to
+            us. Oh, and you can pick a troll who'll be responsible for your message.
+          
+          <form>
+            <label for="fname">First name:</label><br />
+            <input type="text" id="fname" name="fname" /><br />
+            <label for="lname">Last name:</label><br />
+            <input type="text" id="lname" name="lname" />
+            <label for="email">Email:</label><br/>
+            <input type="email" id="email" name="email">
+            <label for="tel">Phone number:</label><br/>
+            <input type="tel" id="phone-number" name="phone-number">
+            <label for="message">Your message:</label><br />
+            <input type="text" id="message" name="message" />
+            <input type="radio" id="Borloth" name="pick_a_troll" value="Borloth" >
+            <label for="Borloth">Borloth</label><br/>
+            <input type="radio" id="Ubnog" name="pick_a_troll" value="Ubnog">
+            <label for="Ubnog">Ubnog</label><br/>
+            <input type="radio" id="Durgurk" name="pick_a_troll" value="Durgurk">
+            <label for="Durgurk">Durgurk</label>
+            <input class="button" type="submit" value="Send message">   
+          </form>
         </section>
       </div>
     </main>
