--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <label for="email">Email:</label><br/>
             <input type="email" id="email" name="email">
             <label for="tel">Phone number:</label><br/>
-            <input type="tel" id="phone-number" name="phone-number">
+            <input type="tel" id="tel" name="phone-number">
             <label for="message">Your message:</label><br />
             <input type="text" id="message" name="message" />
             <input type="radio" id="Borloth" name="pick_a_troll" value="Borloth" >
