small fixes to contact form, responsive article hero

--- a/contacts.html
+++ b/contacts.html
@@ -49,22 +49,22 @@
         <p>
           If you wish to get in touch with our team, leave your message below
           and our kind cave trolls will be let out of their cages to carefully
-          rewrite your message on the parchment paper, and deliver your message
+          rewrite your message on the parchment paper, and deliver it
           to us. Oh, and you can pick a troll who'll be responsible for your
           message.
         </p>
 
         <form>
-          <label for="fname">First name:</label><br />
-          <input type="text" id="fname" name="fname" /><br />
-          <label for="lname">Last name:</label><br />
-          <input type="text" id="lname" name="lname" />
-          <label for="email">Email:</label><br />
-          <input type="email" id="email" name="email" />
-          <label for="tel">Phone number:</label><br />
-          <input type="tel" id="phone-number" name="phone-number" />
-          <label for="message">Your message:</label><br />
-          <input type="text" id="message" name="message" />
+            <label for="fname">First name:</label><br />
+            <input class="string-input" type="text" id="fname" name="fname" /><br />
+            <label for="lname">Last name:</label><br />
+            <input class="string-input" type="text" id="lname" name="lname" />
+            <label for="email">Email:</label><br />
+            <input class="string-input" type="email" id="email" name="email" />
+            <label for="tel">Phone number:</label><br />
+            <input class="string-input" type="tel" id="tel" name="phone-number" />
+            <label for="message">Your message:</label><br />
+            <textarea name="message" id="message"></textarea>
           <input
             type="radio"
             id="Borloth"
