--- a/index.html
+++ b/index.html
@@ -109,32 +109,43 @@
             </p>
           </article>
         </section>
-        <section class="contact home">
+        <section class="contact">
           <h3>Contact us</h3>
           <p>
             If you wish to get in touch with our team, leave your message below
             and our kind cave trolls will be let out of their cages to carefully
-            rewrite your message on the parchment paper, and deliver your message to
-            us. Oh, and you can pick a troll who'll be responsible for your message.
-          
+            rewrite your message on the parchment paper, and deliver it to us.
+            Oh, and you can pick a troll who'll be responsible for your message.
+          </p>
+
           <form>
             <label for="fname">First name:</label><br />
-            <input type="text" id="fname" name="fname" /><br />
+            <input class="string-input" type="text" id="fname" name="fname" /><br />
             <label for="lname">Last name:</label><br />
-            <input type="text" id="lname" name="lname" />
-            <label for="email">Email:</label><br/>
-            <input type="email" id="email" name="email">
-            <label for="tel">Phone number:</label><br/>
-            <input type="tel" id="tel" name="phone-number">
+            <input class="string-input" type="text" id="lname" name="lname" />
+            <label for="email">Email:</label><br />
+            <input class="string-input" type="email" id="email" name="email" />
+            <label for="tel">Phone number:</label><br />
+            <input class="string-input" type="tel" id="tel" name="phone-number" />
             <label for="message">Your message:</label><br />
-            <input type="text" id="message" name="message" />
-            <input type="radio" id="Borloth" name="pick_a_troll" value="Borloth" >
-            <label for="Borloth">Borloth</label><br/>
-            <input type="radio" id="Ubnog" name="pick_a_troll" value="Ubnog">
-            <label for="Ubnog">Ubnog</label><br/>
-            <input type="radio" id="Durgurk" name="pick_a_troll" value="Durgurk">
+            <textarea name="message" id="message"></textarea>
+            <input
+              type="radio"
+              id="Borloth"
+              name="pick_a_troll"
+              value="Borloth"
+            />
+            <label for="Borloth">Borloth</label><br />
+            <input type="radio" id="Ubnog" name="pick_a_troll" value="Ubnog" />
+            <label for="Ubnog">Ubnog</label><br />
+            <input
+              type="radio"
+              id="Durgurk"
+              name="pick_a_troll"
+              value="Durgurk"
+            />
             <label for="Durgurk">Durgurk</label>
-            <input class="button" type="submit" value="Send message">   
+            <input class="button" type="submit" value="Send message" />
           </form>
         </section>
       </div>
