small changes, desktop articles (still WiP

--- a/black-templars-painting-guide.html
+++ b/black-templars-painting-guide.html
@@ -44,7 +44,7 @@
       <div class="article-wrapper">
         <article>
           <h2>
-            In this article, we're going to discuss the fine art of slapping
+            In this tutorial, we're going to discuss the fine art of slapping
             black paint on grey plastic.
           </h2>
           <p class="article-intro">
@@ -55,27 +55,30 @@
             I also explain how to paint details like gold, robes, and purity
             seals, which are pretty universal.
           </p>
-          <p class="part-heading">Black armour</p>
-          <section class="guide-step">
-            <img src="images/painting-image.png" alt="painting guide, step 1" />
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
-              officia maiores expedita libero nulla hic.
-            </p>
-          </section>
-          <section class="guide-step">
-            <img src="images/painting-image.png" alt="painting guide, step 2" />
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
-              officia maiores expedita libero nulla hic.
-            </p>
-          </section>
-          <section class="guide-step">
-            <img src="images/painting-image.png" alt="painting guide, step 2" />
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
-              officia maiores expedita libero nulla hic.
-            </p>
+          <article class="article-main">
+            <p class="part-heading">Black armour</p>
+            <section class="guide-step">
+              <img src="images/painting-image.png" alt="painting guide, step 1" />
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
+                officia maiores expedita libero nulla hic.
+              </p>
+            </section>
+            <section class="guide-step">
+              <img src="images/painting-image.png" alt="painting guide, step 2" />
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
+                officia maiores expedita libero nulla hic.
+              </p>
+            </section>
+            <section class="guide-step">
+              <img src="images/painting-image.png" alt="painting guide, step 2" />
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
+                officia maiores expedita libero nulla hic.
+              </p>
+          </article>
+         
           </section>
         </article>
       </div>
