--- a/skaventide.html
+++ b/skaventide.html
@@ -50,27 +50,30 @@
             In this article, we're going to crack open the boxset and examine it's contents,
             as well as share our first impressions on the 4th Edition of AoS, and the new Spearhead gamemode.
           </p>
-          <p class="part-heading">Contents</p>
-          <section class="guide-step">
-            <img src="images/painting-image.png" alt="painting guide, step 1" />
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
-              officia maiores expedita libero nulla hic.
-            </p>
-          </section>
-          <section class="guide-step">
-            <img src="images/painting-image.png" alt="painting guide, step 2" />
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
-              officia maiores expedita libero nulla hic.
-            </p>
-          </section>
-          <section class="guide-step">
-            <img src="images/painting-image.png" alt="painting guide, step 2" />
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
-              officia maiores expedita libero nulla hic.
-            </p>
+          <article class="article-main">
+            <p class="part-heading">Contents</p>
+            <section class="guide-step">
+              <img src="images/painting-image.png" alt="painting guide, step 1" />
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
+                officia maiores expedita libero nulla hic.
+              </p>
+            </section>
+            <section class="guide-step">
+              <img src="images/painting-image.png" alt="painting guide, step 2" />
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
+                officia maiores expedita libero nulla hic.
+              </p>
+            </section>
+            <section class="guide-step">
+              <img src="images/painting-image.png" alt="painting guide, step 2" />
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
+                officia maiores expedita libero nulla hic.
+              </p>
+          </article>
+         
           </section>
         </article>
       </div>
