--- a/tyranids-painting-guide.html
+++ b/tyranids-painting-guide.html
@@ -52,27 +52,30 @@
             Techniques shown in the guide are colour scheme-agnostic, so if you don't want your Tyranids to have beige flesh or black carapace,
             feel free to swap the paints and still achieve striking and fast results.
           </p>
-          <p class="part-heading">Beige flesh</p>
-          <section class="guide-step">
-            <img src="images/painting-image.png" alt="painting guide, step 1" />
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
-              officia maiores expedita libero nulla hic.
-            </p>
-          </section>
-          <section class="guide-step">
-            <img src="images/painting-image.png" alt="painting guide, step 2" />
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
-              officia maiores expedita libero nulla hic.
-            </p>
-          </section>
-          <section class="guide-step">
-            <img src="images/painting-image.png" alt="painting guide, step 2" />
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
-              officia maiores expedita libero nulla hic.
-            </p>
+          <article class="article-main">
+            <p class="part-heading">Beige flesh</p>
+            <section class="guide-step">
+              <img src="images/painting-image.png" alt="painting guide, step 1" />
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
+                officia maiores expedita libero nulla hic.
+              </p>
+            </section>
+            <section class="guide-step">
+              <img src="images/painting-image.png" alt="painting guide, step 2" />
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
+                officia maiores expedita libero nulla hic.
+              </p>
+            </section>
+            <section class="guide-step">
+              <img src="images/painting-image.png" alt="painting guide, step 2" />
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
+                officia maiores expedita libero nulla hic.
+              </p>
+          </article>
+
           </section>
         </article>
       </div>
