changed some stupid headings

--- a/black-templars-painting-guide.html
+++ b/black-templars-painting-guide.html
@@ -44,7 +44,7 @@
       <div class="article-wrapper">
         <article>
           <h2>
-            In this tutorial, we're going to discuss the fine art of slapping
+            The fine art of slapping
             black paint on grey plastic.
           </h2>
           <p class="article-intro">
