--- a/tyranids-painting-guide.html
+++ b/tyranids-painting-guide.html
@@ -44,7 +44,7 @@
       <div class="article-wrapper">
         <article>
           <h2>
-            In this tutorial, I'm going to demonstrate how to paint the gritty Tyranids of the Hive Fleet [REDACTED]
+            Learn to paint the gritty Tyranids of the Hive Fleet [REDACTED]
           </h2>
           <p class="article-intro">
             This painting guide has two parts - one without using an airbrush,
