2/3 articles done, grid included in one of the articles

--- a/black-templars-painting-guide.html
+++ b/black-templars-painting-guide.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <title>Miniature Painting: Black Templars Painting Guide</title>
+    <title>Miniature Painting: Black Armour Painting Guide</title>
   </head>
   <body>
     <header>
@@ -39,47 +39,70 @@
     </header>
     <main>
       <div class="image-heading bt">
-        <h1>Black Templars: Painting Guide</h1>
+        <h1>Black Armour: Painting Guide</h1>
       </div>
       <div class="article-wrapper">
         <article>
-          <h2>
-            The fine art of slapping
-            black paint on grey plastic.
-          </h2>
+          <h2>The fine art of slapping black paint on grey plastic</h2>
           <p class="article-intro">
-            This painting guide has two parts - one without using an airbrush,
-            and one with it. <br />
+            This painting guide requires an airbrush, and assumes that you have
+            a basic understanding of how to use one.
+            <br />
             Techniques shown here can easily be applied on any black armour-clad
-            miniatures, such as Chaos Warriors or the Deathwatch. <br />
-            I also explain how to paint details like gold, robes, and purity
-            seals, which are pretty universal.
+            miniatures, such as Chaos Warriors or the Deathwatch. <br />Also,
+            the paints that we use are not your only option, feel free to use
+            whatewer you have at your disposal.
           </p>
-          <article class="article-main">
+          <div class="article-main">
             <p class="part-heading">Black armour</p>
             <section class="guide-step">
-              <img src="images/painting-image.png" alt="painting guide, step 1" />
+              <img src="images/step1.jpg" alt="painting guide, step 1" />
+              <p>Prime the model black.</p>
+            </section>
+            <section class="guide-step">
+              <img src="images/step2.jpg" alt="painting guide, step 2" />
+              <p>Apply a layer of black.</p>
+            </section>
+            <section class="guide-step">
+              <img src="images/step3.jpg" alt="painting guide, step 3" />
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
-                officia maiores expedita libero nulla hic.
+                Add airbrush highlights. You can use any shade of dark grey.
               </p>
             </section>
             <section class="guide-step">
-              <img src="images/painting-image.png" alt="painting guide, step 2" />
+              <img src="images/step4.jpg" alt="painting guide, step 4" />
+              <p>Add edge highlights.</p>
+            </section>
+            <p class="part-heading">Shoulder Pads</p>
+            <section class="guide-step">
+              <img src="images/done.jpg" alt="painting guide, step 5" />
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
-                officia maiores expedita libero nulla hic.
+                Mask the shoulder pads and airbrush them with off-white paint.
               </p>
             </section>
             <section class="guide-step">
-              <img src="images/painting-image.png" alt="painting guide, step 2" />
+              <img src="images/done.jpg" alt="painting guide, step 6" />
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
-                officia maiores expedita libero nulla hic.
+                Paint the rim of the pad with dark red, or black, depending on
+                the model.
               </p>
-          </article>
-         
-          </section>
+            </section>
+            <section class="guide-step">
+              <img src="images/done.jpg" alt="painting guide, step 7" />
+              <p>
+                Add edge highlights. For black - same colour as the armour
+                highlight. For red, we use Citadel Mephiston Red.
+              </p>
+            </section>
+            <section class="guide-step">
+              <p class="part-heading">Finished models</p>
+              <img src="images/done.jpg" alt="painting guide, done" />
+              <p>
+                By following these simple steps, you can paint up your
+                black-armoured force in no time.
+              </p>
+            </section>
+          </div>
         </article>
       </div>
     </main>
