--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <section class="bottom item-3">
             <a href="black-templars-painting-guide.html">
               <img src="images/bt.png" alt="Black Templars painting guide" />
-              <p class="article-title">Guide: Painting Black Templars</p>
+              <p class="article-title">Guide: Painting Black Armour</p>
               <p class="article-desc">
                 I See a Plastic Model and I Want It Painted Black
               </p>
