images replaced where needed, content added to all 3 articles

--- a/black-templars-painting-guide.html
+++ b/black-templars-painting-guide.html
@@ -54,48 +54,35 @@
             whatewer you have at your disposal.
           </p>
           <div class="article-main">
-            <p class="part-heading">Black armour</p>
+            <p class="part-heading">Painting</p>
             <section class="guide-step">
               <img src="images/step1.jpg" alt="painting guide, step 1" />
-              <p>Prime the model black.</p>
+              <p>
+                Prime the model black. You can use any type of primer, be it
+                rattlecan, brush-on, or airbrush primer.
+              </p>
             </section>
             <section class="guide-step">
               <img src="images/step2.jpg" alt="painting guide, step 2" />
-              <p>Apply a layer of black.</p>
+              <p>
+                Apply a layer of black paint. We use Vallejo Game Air Black.
+              </p>
             </section>
             <section class="guide-step">
               <img src="images/step3.jpg" alt="painting guide, step 3" />
               <p>
-                Add airbrush highlights. You can use any shade of dark grey.
+                Add airbrush highlights. 
               </p>
             </section>
             <section class="guide-step">
               <img src="images/step4.jpg" alt="painting guide, step 4" />
-              <p>Add edge highlights.</p>
-            </section>
-            <p class="part-heading">Shoulder Pads</p>
-            <section class="guide-step">
-              <img src="images/done.jpg" alt="painting guide, step 5" />
               <p>
-                Mask the shoulder pads and airbrush them with off-white paint.
+                Add edge highlights and paint thin lines of paint over the
+                armour to imitate scratch marks.
               </p>
             </section>
+            <p class="part-heading">Finished models</p>
             <section class="guide-step">
-              <img src="images/done.jpg" alt="painting guide, step 6" />
-              <p>
-                Paint the rim of the pad with dark red, or black, depending on
-                the model.
-              </p>
-            </section>
-            <section class="guide-step">
-              <img src="images/done.jpg" alt="painting guide, step 7" />
-              <p>
-                Add edge highlights. For black - same colour as the armour
-                highlight. For red, we use Citadel Mephiston Red.
-              </p>
-            </section>
-            <section class="guide-step">
-              <p class="part-heading">Finished models</p>
               <img src="images/done.jpg" alt="painting guide, done" />
               <p>
                 By following these simple steps, you can paint up your
