--- a/skaventide.html
+++ b/skaventide.html
@@ -189,7 +189,7 @@
                 Modular Rules: The rules are divided into modular components.
                 For example, Spearhead uses only core rules and its battlepack,
                 while Path to Glory uses advanced rules but not battle tactics.
-                The General’s Handbook adds season rules.
+                The General's Handbook adds season rules.
               </li>
             </ul>
             <p>
