guides and reviews became articles, specifications added, all articles on articles page

--- a/contacts.html
+++ b/contacts.html
@@ -28,10 +28,9 @@
           <nav>
             <ul>
               <li><a class="underline" href="index.html">Home</a></li>
-              <li><a class="underline" href="guides.html">Guides</a></li>
-              <li><a class="underline" href="#">Reviews</a></li>
+              <li><a class="underline" href="articles.html">Articles</a></li>
               <li><a class="underline" href="contacts.html">Contacts</a></li>
-              <li><a class="underline" href="#">Specifications</a></li>
+              <li><a class="underline" href="specs.html">Specifications</a></li>
             </ul>
           </nav>
         </div>
