--- a/index.html
+++ b/index.html
@@ -29,10 +29,9 @@
           <nav>
             <ul>
               <li><a class="underline" href="index.html">Home</a></li>
-              <li><a class="underline" href="guides.html">Guides</a></li>
-              <li><a class="underline" href="#">Reviews</a></li>
+              <li><a class="underline" href="articles.html">Articles</a></li>
               <li><a class="underline" href="contacts.html">Contacts</a></li>
-              <li><a class="underline" href="#">Specifications</a></li>
+              <li><a class="underline" href="specs.html">Specifications</a></li>
             </ul>
           </nav>
         </div>
@@ -49,7 +48,7 @@
       <div class="articles">
         <section class="top item-1">
           <a href="skaventide.html">
-            <img src="images/skaventide.png" alt="Skaventide boxset review" />
+            <img src="images/skaventide.jpg" alt="Skaventide boxset review" />
             <p class="article-title">Skaventide Unleashed</p>
             <p class="article-desc">Demigods and Rat-Things, Yes-Yes</p>
           </a>
@@ -83,19 +82,19 @@
           <article class="gallery-item">
             <img src="images/stormcast.jpg" alt="Stormcast Ethernal" />
             <p>
-              A Stormcast Ethernal Vindictor painted to look as a stone statue - a little side project that I did for DnD. The miniature was painted with mostly washes and drybrushing.
+              A Stormcast Ethernal Vindictor painted to look as a stone statue -
+              a little side project that I did for DnD. The miniature was
+              painted with mostly washes and drybrushing.
             </p>
           </article>
           <article class="gallery-item">
             <img src="images/dread.jpg" alt="Redemptor Dreadnought" />
-            <p>
-              Redemptor Dreadnought - my first ever vehicle model.
+            <p>Redemptor Dreadnought - my first ever vehicle model.</p>
           </article>
+
           <article class="gallery-item">
             <img src="images/grim.jpg" alt="Chaplain Grimaldus" />
-            <p>
-              Chaplan Grimaldues and his retinue. 
-            </p>
+            <p>Chaplan Grimaldus and his retinue.</p>
           </article>
           <article class="gallery-item">
             <img
