--- a/specs.html
+++ b/specs.html
@@ -50,7 +50,7 @@
           website offers a wealth of resources, from in-depth review articles
           and comprehensive painting guides to stunning paintjob showcases.
           Whether you're a seasoned player or a newcomer to the Warhammer
-          universe, Warhammer World is designed to inspire and educate. The site
+          universe, Miniature Painting is designed to inspire and educate. The site
           fosters a vibrant community where fans can share their experiences,
           learn new techniques, and showcase their own painted miniatures.
         </p>
