--- a/index.html
+++ b/index.html
@@ -138,7 +138,8 @@
             />
             <label for="message">Your message:</label><br />
             <textarea name="message" id="message"></textarea>
-            <input
+            <fieldset>
+              <input
               type="radio"
               id="Borloth"
               name="pick_a_troll"
@@ -154,6 +155,8 @@
               value="Durgurk"
             />
             <label for="Durgurk">Durgurk</label>
+            </fieldset>
+          
             <input class="button" type="submit" value="Send message" />
           </form>
         </section>
