scroll to top button

--- a/contacts.html
+++ b/contacts.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <header>
+      <div id="scrolltop"></div>
       <div class="burger">
         <input type="checkbox" id="burger-toggle" />
         <label for="burger-toggle" class="burger-label">
@@ -83,6 +84,11 @@
           <input class="button" type="submit" value="Send message" />
         </form>
       </section>
+      <a href="#scrolltop">
+        <div class="scroll-arrow">
+          <div id="scroll-text">^</div>
+        </div>
+      </a>
     </main>
     <footer>
         <p>
