--- a/specs.html
+++ b/specs.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <header>
+        <div id="scrolltop"></div>
       <div class="burger">
         <input type="checkbox" id="burger-toggle" />
         <label for="burger-toggle" class="burger-label">
@@ -110,6 +111,11 @@
         </ul>
       </article>
     </main>
+    <a href="#scrolltop">
+        <div class="scroll-arrow">
+          <div id="scroll-text">^</div>
+        </div>
+      </a>
     <footer>
       <p>
         This website and all of its contents are ©
