--- a/tyranids-painting-guide.html
+++ b/tyranids-painting-guide.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <header>
+      <div id="scrolltop"></div>
       <div class="burger">
         <input type="checkbox" id="burger-toggle" />
         <label for="burger-toggle" class="burger-label">
@@ -94,6 +95,11 @@
         </article>
       </div>
     </main>
+    <a href="#scrolltop">
+      <div class="scroll-arrow">
+        <div id="scroll-text">^</div>
+      </div>
+    </a>
     <footer>
       <p>
         This website and all of its contents are ©
