return after pressing scroll up fixed, but animation won't work

--- a/articles.html
+++ b/articles.html
@@ -14,7 +14,6 @@
   </head>
   <body>
     <header>
-      <div id="scrolltop"></div>
       <div class="burger">
         <input type="checkbox" id="burger-toggle" />
         <label for="burger-toggle" class="burger-label">
@@ -65,7 +64,7 @@
         </div>
       </div>
     </main>
-    <a href="#scrolltop">
+    <a href="articles.html">
       <div class="scroll-arrow">
         <div id="scroll-text">^</div>
       </div>
