--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 
   <body>
     <header>
-      <div id="scrolltop"></div>
       <div class="burger">
         <input type="checkbox" id="burger-toggle" />
         <label for="burger-toggle" class="burger-label">
@@ -161,7 +160,7 @@
           </form>
         </section>
       </div>
-      <a href="#scrolltop">
+      <a href="index.html">
         <div class="scroll-arrow">
           <div id="scroll-text">^</div>
         </div>
