--- a/tyranids-painting-guide.html
+++ b/tyranids-painting-guide.html
@@ -14,7 +14,6 @@
   </head>
   <body>
     <header>
-      <div id="scrolltop"></div>
       <div class="burger">
         <input type="checkbox" id="burger-toggle" />
         <label for="burger-toggle" class="burger-label">
@@ -95,7 +94,7 @@
         </article>
       </div>
     </main>
-    <a href="#scrolltop">
+    <a href="tyranids-painting-guide.html">
       <div class="scroll-arrow">
         <div id="scroll-text">^</div>
       </div>
