--- a/contacts.html
+++ b/contacts.html
@@ -14,7 +14,6 @@
   </head>
   <body>
     <header>
-      <div id="scrolltop"></div>
       <div class="burger">
         <input type="checkbox" id="burger-toggle" />
         <label for="burger-toggle" class="burger-label">
@@ -84,7 +83,7 @@
           <input class="button" type="submit" value="Send message" />
         </form>
       </section>
-      <a href="#scrolltop">
+      <a href="contacts.html">
         <div class="scroll-arrow">
           <div id="scroll-text">^</div>
         </div>
