--- a/specs.html
+++ b/specs.html
@@ -14,7 +14,6 @@
   </head>
   <body>
     <header>
-        <div id="scrolltop"></div>
       <div class="burger">
         <input type="checkbox" id="burger-toggle" />
         <label for="burger-toggle" class="burger-label">
@@ -111,7 +110,7 @@
         </ul>
       </article>
     </main>
-    <a href="#scrolltop">
+    <a href="specs.html">
         <div class="scroll-arrow">
           <div id="scroll-text">^</div>
         </div>
