all done I guess

--- a/articles.html
+++ b/articles.html
@@ -65,8 +65,8 @@
       </div>
     </main>
     <a href="articles.html">
-      <div class="scroll-arrow">
-        <div id="scroll-text">^</div>
+      <div class="scroll-btn">
+        <div id="scroll-arrow"></div>
       </div>
     </a>
     <footer>
