--- a/black-templars-painting-guide.html
+++ b/black-templars-painting-guide.html
@@ -93,8 +93,8 @@
       </div>
     </main>
     <a href="black-templars-painting-guide.html">
-      <div class="scroll-arrow">
-        <div id="scroll-text">^</div>
+      <div class="scroll-btn">
+        <div id="scroll-arrow"></div>
       </div>
     </a>
     <footer>
