--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="articles">
         <section class="top item-1">
           <a href="skaventide.html">
-            <img src="images/skaventide.jpg" alt="Skaventide boxset review" />
+            <img src="images/skaventide2.jpg" alt="Skaventide boxset review" />
             <p class="article-title">Skaventide Unleashed</p>
             <p class="article-desc">Demigods and Rat-Things, Yes-Yes</p>
           </a>
@@ -138,31 +138,37 @@
             />
             <label for="message">Your message:</label><br />
             <textarea name="message" id="message"></textarea>
-
-            <input
-              type="radio"
-              id="Borloth"
-              name="pick_a_troll"
-              value="Borloth"
-            />
-            <label for="Borloth">Borloth</label><br />
-            <input type="radio" id="Ubnog" name="pick_a_troll" value="Ubnog" />
-            <label for="Ubnog">Ubnog</label><br />
-            <input
-              type="radio"
-              id="Durgurk"
-              name="pick_a_troll"
-              value="Durgurk"
-            />
-            <label for="Durgurk">Durgurk</label>
+            <fieldset>
+              <input
+                type="radio"
+                id="Borloth"
+                name="pick_a_troll"
+                value="Borloth"
+              />
+              <label for="Borloth">Borloth</label><br />
+              <input
+                type="radio"
+                id="Ubnog"
+                name="pick_a_troll"
+                value="Ubnog"
+              />
+              <label for="Ubnog">Ubnog</label><br />
+              <input
+                type="radio"
+                id="Durgurk"
+                name="pick_a_troll"
+                value="Durgurk"
+              />
+              <label for="Durgurk">Durgurk</label>
+            </fieldset>
 
             <input class="button" type="submit" value="Send message" />
           </form>
         </section>
       </div>
       <a href="index.html">
-        <div class="scroll-arrow">
-          <div id="scroll-text">^</div>
+        <div class="scroll-btn">
+          <div id="scroll-arrow"></div>
         </div>
       </a>
     </main>
