--- a/specs.html
+++ b/specs.html
@@ -111,9 +111,9 @@
       </article>
     </main>
     <a href="specs.html">
-        <div class="scroll-arrow">
-          <div id="scroll-text">^</div>
-        </div>
+      <div class="scroll-btn">
+        <div id="scroll-arrow"></div>
+      </div>
       </a>
     <footer>
       <p>
