--- a/tyranids-painting-guide.html
+++ b/tyranids-painting-guide.html
@@ -95,8 +95,8 @@
       </div>
     </main>
     <a href="tyranids-painting-guide.html">
-      <div class="scroll-arrow">
-        <div id="scroll-text">^</div>
+      <div class="scroll-btn">
+        <div id="scroll-arrow"></div>
       </div>
     </a>
     <footer>
