--- a/skaventide.html
+++ b/skaventide.html
@@ -201,8 +201,8 @@
       </div>
     </main>
     <a href="skaventide.html">
-      <div class="scroll-arrow">
-        <div id="scroll-text">^</div>
+      <div class="scroll-btn">
+        <div id="scroll-arrow"></div>
       </div>
     </a>
     <footer>
