unnecessary span removed from forms

--- a/contacts.html
+++ b/contacts.html
@@ -61,7 +61,7 @@
             name="fname"
             placeholder="John"
             required
-          /><span></span><br />
+          /><br />
           <label for="lname">Last name:</label><br />
           <input
             class="string-input"
@@ -70,7 +70,7 @@
             name="lname"
             placeholder="Doe"
             required
-          /><span></span><br />
+          /><br />
           <label for="email">Email:</label><br />
           <input
             class="string-input"
@@ -79,7 +79,7 @@
             name="email"
             placeholder="john.doe@example.com"
             required
-          /><span></span><br />
+          /><br />
           <label for="tel">Phone number:</label><br />
           <input
             class="string-input"
@@ -88,10 +88,10 @@
             name="phone-number"
             placeholder="123-456-7890"
             required
-          /><span></span><br />
+          /><br />
           <label for="message">Your message:</label><br />
-          <textarea name="message" id="message" required></textarea><span></span
-          ><br />
+          <textarea name="message" id="message" required></textarea>
+          <br />
           <fieldset required>
             <legend>Pick a troll:</legend>
             <input
@@ -111,7 +111,6 @@
               value="Durgurk"
             />
             <label for="Durgurk">Durgurk</label>
-            <span></span>
           </fieldset>
           <br />
           <input class="button" type="submit" value="Send message" />
