--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
               name="fname"
               placeholder="John"
               required
-            /><span></span><br />
+            /><br />
             <label for="lname">Last name:</label><br />
             <input
               class="string-input"
@@ -135,7 +135,7 @@
               name="lname"
               placeholder="Doe"
               required
-            /><span></span><br />
+            /><br />
             <label for="email">Email:</label><br />
             <input
               class="string-input"
@@ -144,7 +144,7 @@
               name="email"
               placeholder="john.doe@example.com"
               required
-            /><span></span><br />
+            /><br />
             <label for="tel">Phone number:</label><br />
             <input
               class="string-input"
@@ -153,10 +153,9 @@
               name="phone-number"
               placeholder="123-456-7890"
               required
-            /><span></span><br />
+            /><br />
             <label for="message">Your message:</label><br />
-            <textarea name="message" id="message" required></textarea
-            ><span></span><br />
+            <textarea name="message" id="message" required></textarea><br />
             <fieldset required>
               <legend>Pick a troll:</legend>
               <input
@@ -181,7 +180,6 @@
                 value="Durgurk"
               />
               <label for="Durgurk">Durgurk</label>
-              <span></span>
             </fieldset>
             <br />
             <input class="button" type="submit" value="Send message" />
