--- a/articles.html
+++ b/articles.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Inter:wght@200..700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Guides: Miniature Painting</title>
   </head>
   <body>
