--- a/black-templars-painting-guide.html
+++ b/black-templars-painting-guide.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Inter:wght@200..700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Miniature Painting: Black Armour Painting Guide</title>
   </head>
   <body>
